--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
